# mistral-workflow-proj

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/workflows/: erp_health.py
